@@ -7,7 +7,7 @@ function (object, cutoff = 1,  ...)
         stop("Needs a constrained ordination")
     if (is.null(object$terms)) 
         stop("Analysis is only possible for models fitted using formula")
-    lc <- object$CCA$u
+    lc<- as.data.frame(object$CCA$u)
     ## Handle missing values in scores, both "omit" and "exclude" to
     ## match dims with data.
     if (!is.null(object$na.action)) {
@@ -21,8 +21,10 @@ function (object, cutoff = 1,  ...)
     Pval <- rep(NA, rnk+1)
     out <- data.frame(df, chi, Fval, nperm, Pval)
     environment(object$terms) <- environment()
-    fla <- update(formula(object), . ~ lc[,1] + Condition(lc[,-1]))
-    sol <- anova(update(object, fla),  ...)
+    fla <- paste(". ~ ", axnam[1], "+ Condition(",
+                 paste(axnam[-1], collapse="+"),")")
+    fla <- update(formula(object), fla)
+    sol <- anova(update(object, fla, data=lc),  ...)
     out[c(1, rnk + 1), ] <- sol
     seed <- attr(sol, "Random.seed")
     attr(out, "names") <- attr(sol, "names")
@@ -33,8 +35,10 @@ function (object, cutoff = 1,  ...)
     bigperm <- out$N.Perm[1]
     if (rnk > 1) {
         for (.ITRM in 2:rnk) {
-            fla <- update(formula(object),  .~ lc[, .ITRM] + Condition(lc[,-(.ITRM)]) )
-            sol <- update(object, fla)
+            fla <- paste(".~", axnam[.ITRM], "+Condition(",
+                         paste(axnam[-(.ITRM)], collapse="+"),")")
+            fla <- update(formula(object),  fla) 
+            sol <- update(object, fla, data = lc)
             assign(".Random.seed", seed, envir = .GlobalEnv)
             out[.ITRM, ] <- as.matrix(anova(sol, ...))[1, 
                 ]
