@@ -20,6 +20,13 @@ Version 1.18-21 (opened January 9, 2011)
 	scale of input dissimilarities. The function uses only the real
 	axes, and imaginary dimensions are ignored.
 
+	* anova.cca: by = "term" and by = "axis" work now both with the
+	data= statement and with variables in the GlobalEnv both in
+	cca/rda and in capscale. A failing case is still anova(..., by =
+	"axis", subset=...) because subset is applied to the constraints,
+	but not to the response. Moreover, it seems that 'subset' is not
+	implemented for capscale(). 
+
 Version 1.18-20 (closed January 9, 2011)
 
 	* base of vegan release 1.17-6 (released on Jan 10, 2011).
